# lab_os6

./: .gitignore  CMakeLists.txt  a.out  main.cpp  node.cpp  report.docx  server.cpp  server.h  struct_server.cpp  struct_server.h  test  unittests.cpp
tests/: unittests.cpp
tmp/: main  node
